--- a/.github/workflows/heml-cicd.yml
+++ b/.github/workflows/heml-cicd.yml
@@ -11,6 +11,7 @@ env:
   KUBE_NAMESPACE: api
   HELM_RELEASE: model-serving
 
+jobs:
   deploy-helm:
     needs: build-and-push-image
     runs-on: ubuntu-latest
