--- a/.github/workflows/heml-cicd.yml
+++ b/.github/workflows/heml-cicd.yml
@@ -74,6 +74,8 @@ jobs:
         run: |
           helm upgrade --install model-serving ./charts/model-serving \
             --namespace api
+          helm upgrade --install argocd ./charts/argocd \
+            --namespace cicd-namespace 
       - name: Check deployment
         run: |
           kubectl get deployments -n api
