--- a/charts/model-serving/templates/deployment.yaml
+++ b/charts/model-serving/templates/deployment.yaml
@@ -25,3 +25,4 @@ spec:
             - containerPort: {{ .Values.service.targetPort }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
+#change trigger helm release
