--- a/charts/model-serving/Chart.yaml
+++ b/charts/model-serving/Chart.yaml
@@ -4,3 +4,4 @@ description: FastAPI model serving app deployed on GKE api namespace and node po
 type: application
 version: 0.1.0
 appVersion: "1.0.0"
+#change not trigger helm release
