--- a/charts/model-serving/values.yaml
+++ b/charts/model-serving/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: dattruongquoc/app
-  tag: latest
+  tag: 5f1e63cb3687a6c9b09242f82045fb5334e1de65
   pullPolicy: IfNotPresent
 
 service:
