--- a/charts/model-serving/values.yaml
+++ b/charts/model-serving/values.yaml
@@ -6,9 +6,21 @@ image:
   pullPolicy: IfNotPresent
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 80
   targetPort: 8000
+
+ingress:
+  enabled: true
+  className: nginx
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+  hosts:
+    - host: ""   # hoặc "*" để wildcard
+      paths:
+        - path: /
+          pathType: Prefix
+  tls: []
 
 resources:
   requests:
