--- a/charts/model-serving/values.yaml
+++ b/charts/model-serving/values.yaml
@@ -18,7 +18,7 @@ ingress:
   hosts:
     - host: "*"   # hoặc "*" để wildcard
       paths:
-        - path: /
+        - path: /app
           pathType: Prefix
   tls: []
 
