--- a/charts/model-serving/templates/ingress.yaml
+++ b/charts/model-serving/templates/ingress.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ include "mychart.fullname" . }}
+  name: {{ include "model-serving.fullname" . }}
   labels:
     {{- include "mychart.labels" . | nindent 4 }}
   annotations:
