--- a/.github/workflows/heml-cicd.yml
+++ b/.github/workflows/heml-cicd.yml
@@ -72,6 +72,9 @@ jobs:
 
       - name: Deploy with Helm
         run: |
+          cd charts/argo-cd
+          helm dependency update
+
           helm upgrade --install argocd-new ./charts/argo-cd \
             --namespace cicd-namespace-new
 
