deploy arrgo cd to new namespace and node without creating crd

--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -127,7 +127,7 @@ global:
 
   # -- Default tolerations for all components
   tolerations: 
-    - key: "cicd-nodepool"
+    - key: "cicd_nodepool"
       operator: "Equal"
       value: "new"
       effect: "NoSchedule"
