--- a/.github/workflows/heml-cicd.yml
+++ b/.github/workflows/heml-cicd.yml
@@ -76,7 +76,7 @@ jobs:
           helm dependency update
 
           helm upgrade --install argocd-new ./ \
-            --namespace cicd-namespace-new
+            --namespace cicd-namespace-new --debug
 
       # - name: Check deployment
       #   run: |
