--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -42,7 +42,7 @@ crds:
 global:
   # -- Default domain used by all components
   ## Used for ingresses, certificates, SSO, notifications, etc.
-  domain: argocd.example.com
+  domain: ""
 
   # -- Runtime class name for all components
   runtimeClassName: ""
@@ -2396,7 +2396,7 @@ server:
   # Argo CD server ingress configuration
   ingress:
     # -- Enable an ingress resource for the Argo CD server
-    enabled: false
+    enabled: true
     # -- Specific implementation for ingress controller. One of `generic`, `aws` or `gke`
     ## Additional configuration might be required in related configuration sections
     controller: generic
@@ -2409,7 +2409,7 @@ server:
       # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 
     # -- Defines which ingress controller will implement the resource
-    ingressClassName: ""
+    ingressClassName: nginx-new
 
     # -- Argo CD server hostname
     # @default -- `""` (defaults to global.domain)
